src/components/Button/SplitButton/core/size.module.css
@layer adgytec.comps {
    .size {
        --_padding-block: var(--_padding-block-base);

        border-start-start-radius: var(--_shape-start-start);
        border-start-end-radius: var(--_shape-start-end);
        border-end-start-radius: var(--_shape-end-start);
        border-end-end-radius: var(--_shape-end-end);

        padding-inline-start: var(--_padding-inline-start);
        padding-inline-end: var(--_padding-inline-end);
        padding-block: var(--_padding-block);

        display: flex;
        gap: var(--_md-button-icon-label-gap);
        align-items: center;
        justify-content: center;

        box-sizing: border-box;
        min-inline-size: var(--min-tap-target-size);
    }

    .primary {
        /* shape */
        --_inner-shape: var(--_md-split-button-inner-corner-shape);

        --_shape-start-end: var(--_inner-shape);
        --_shape-end-end: var(--_inner-shape);

        --_shape-start-start: var(--_md-split-button-outer-corner-shape);
        --_shape-end-start: var(--_md-split-button-outer-corner-shape);

        /* padding */
        --_padding-inline-start: var(
            --_md-split-button-primary-padding-inline-start
        );
        --_padding-inline-end: var(
            --_md-split-button-primary-padding-inline-end
        );

        --_padding-block-base: var(--_md-split-button-primary-padding-block);

        &[data-hovered] {
            --_inner-shape: var(
                --_md-split-button-interaction-inner-corner-shape
            );
        }

        &[data-pressed] {
            --_inner-shape: var(
                --_md-split-button-interaction-inner-corner-shape
            );
        }
    }

    .trigger {
        /* shape */
        --_inner-shape: var(--_md-split-button-inner-corner-shape);

        --_shape-start-end: var(--_md-split-button-outer-corner-shape);
        --_shape-end-end: var(--_md-split-button-outer-corner-shape);

        --_shape-start-start: var(--_inner-shape);
        --_shape-end-start: var(--_inner-shape);

        /* padding */
        --_padding-inline-start: var(
            --_md-split-button-trigger-padding-inline-start
        );
        --_padding-inline-end: var(
            --_md-split-button-trigger-padding-inline-end
        );

        --_padding-block-base: var(--_md-split-button-trigger-padding-block);

        &[data-hovered] {
            --_inner-shape: var(
                --_md-split-button-interaction-inner-corner-shape
            );
        }

        &[data-pressed] {
            --_inner-shape: var(--_md-split-button-trigger-pressed-shape);

            --_padding-inline-start: var(
                --_md-split-button-trigger-pressed-padding-inline-start
            );
            --_padding-inline-end: var(
                --_md-split-button-trigger-pressed-padding-inline-end
            );
        }
    }

    .extra-small {
        /* height for button is 32 */
        --md-sys-shape-corner-radius-full: calc(16 * var(--dp, 1px));

        --_md-split-button-outer-corner-shape: var(
            --md-sys-shape-corner-radius-full
        );
        --_md-split-button-inner-corner-shape: var(
            --md-sys-shape-corner-radius-extra-small
        );
        --_md-split-button-interaction-inner-corner-shape: var(
            --md-sys-shape-corner-radius-small
        );

        --_md-button-icon-label-gap: var(--md-sys-layout-space-4);
        --_md-button-outline-width: var(--md-sys-shape-border-width-thin);

        /* primary button */
        --_md-split-button-primary-padding-inline-start: var(
            --md-sys-layout-space-12
        );
        --_md-split-button-primary-padding-inline-end: calc(
            10 *
            var(--dp, 1px)
        );

        --_md-split-button-primary-padding-block: calc(6 * var(--dp, 1px));

        /* trigger button */
        --_md-split-button-trigger-padding-inline-start: var(
            --md-sys-layout-space-12
        );
        --_md-split-button-trigger-padding-inline-end: calc(
            14 *
            var(--dp, 1px)
        );

        --_md-split-button-trigger-pressed-padding-inline-start: calc(
            13 *
            var(--dp, 1px)
        );
        --_md-split-button-trigger-pressed-padding-inline-end: calc(
            13 *
            var(--dp, 1px)
        );

        --_md-split-button-trigger-padding-block: calc(5 * var(--dp, 1px));
        --_md-split-button-trigger-pressed-shape: var(
            --md-sys-shape-corner-radius-full
        );
    }

    .small {
        /* height for button is 40 */
        --md-sys-shape-corner-radius-full: calc(20 * var(--dp, 1px));

        --_md-split-button-outer-corner-shape: var(
            --md-sys-shape-corner-radius-full
        );
        --_md-split-button-inner-corner-shape: var(
            --md-sys-shape-corner-radius-extra-small
        );
        --_md-split-button-interaction-inner-corner-shape: var(
            --md-sys-shape-corner-radius-small
        );

        --_md-button-icon-label-gap: var(--md-sys-layout-space-8);
        --_md-button-outline-width: var(--md-sys-shape-border-width-thin);

        /* primary button */
        --_md-split-button-primary-padding-inline-start: var(
            --md-sys-layout-space-16
        );
        --_md-split-button-primary-padding-inline-end: var(
            --md-sys-layout-space-12
        );

        --_md-split-button-primary-padding-block: calc(10 * var(--dp, 1px));

        /* trigger button */
        --_md-split-button-trigger-padding-inline-start: var(
            --md-sys-layout-space-12
        );
        --_md-split-button-trigger-padding-inline-end: calc(
            14 *
            var(--dp, 1px)
        );

        --_md-split-button-trigger-pressed-padding-inline-start: calc(
            13 *
            var(--dp, 1px)
        );
        --_md-split-button-trigger-pressed-padding-inline-end: calc(
            13 *
            var(--dp, 1px)
        );

        --_md-split-button-trigger-padding-block: calc(9 * var(--dp, 1px));
        --_md-split-button-trigger-pressed-shape: var(
            --md-sys-shape-corner-radius-full
        );
    }

    .medium {
        /* height for button is 56 */
        --md-sys-shape-corner-radius-full: calc(28 * var(--dp, 1px));

        --_md-split-button-outer-corner-shape: var(
            --md-sys-shape-corner-radius-full
        );
        --_md-split-button-inner-corner-shape: var(
            --md-sys-shape-corner-radius-extra-small
        );
        --_md-split-button-interaction-inner-corner-shape: var(
            --md-sys-shape-corner-radius-medium
        );

        --_md-button-icon-label-gap: var(--md-sys-layout-space-8);
        --_md-button-outline-width: var(--md-sys-shape-border-width-thin);

        /* primary button */
        --_md-split-button-primary-padding-inline-start: var(
            --md-sys-layout-space-24
        );
        --_md-split-button-primary-padding-inline-end: var(
            --md-sys-layout-space-24
        );

        --_md-split-button-primary-padding-block: var(--md-sys-layout-space-16);

        /* trigger button */
        --_md-split-button-trigger-padding-inline-start: calc(
            13 *
            var(--dp, 1px)
        );
        --_md-split-button-trigger-padding-inline-end: calc(
            17 *
            var(--dp, 1px)
        );

        --_md-split-button-trigger-pressed-padding-inline-start: calc(
            15 *
            var(--dp, 1px)
        );
        --_md-split-button-trigger-pressed-padding-inline-end: calc(
            15 *
            var(--dp, 1px)
        );

        --_md-split-button-trigger-padding-block: calc(15 * var(--dp, 1px));
        --_md-split-button-trigger-pressed-shape: var(
            --md-sys-shape-corner-radius-full
        );
    }

    .large {
        /* height for button is 96 */
        --md-sys-shape-corner-radius-full: calc(48 * var(--dp, 1px));

        --_md-split-button-outer-corner-shape: var(
            --md-sys-shape-corner-radius-full
        );
        --_md-split-button-inner-corner-shape: var(
            --md-sys-shape-corner-radius-small
        );
        --_md-split-button-interaction-inner-corner-shape: var(
            --md-sys-shape-corner-radius-large
        );

        --_md-button-icon-label-gap: var(--md-sys-layout-space-12);
        --_md-button-outline-width: var(--md-sys-shape-border-width-thick);

        /* primary button */
        --_md-split-button-primary-padding-inline-start: var(
            --md-sys-layout-space-48
        );
        --_md-split-button-primary-padding-inline-end: var(
            --md-sys-layout-space-48
        );

        --_md-split-button-primary-padding-block: var(--md-sys-layout-space-32);

        /* trigger button */
        --_md-split-button-trigger-padding-inline-start: calc(
            26 *
            var(--dp, 1px)
        );
        --_md-split-button-trigger-padding-inline-end: var(
            --md-sys-layout-space-32
        );

        --_md-split-button-trigger-pressed-padding-inline-start: calc(
            29 *
            var(--dp, 1px)
        );
        --_md-split-button-trigger-pressed-padding-inline-end: calc(
            29 *
            var(--dp, 1px)
        );

        --_md-split-button-trigger-padding-block: calc(29 * var(--dp, 1px));
        --_md-split-button-trigger-pressed-shape: var(
            --md-sys-shape-corner-radius-full
        );
    }

    .extra-large {
        /* height for button is 136 */
        --md-sys-shape-corner-radius-full: calc(68 * var(--dp, 1px));

        --_md-split-button-outer-corner-shape: var(
            --md-sys-shape-corner-radius-full
        );
        --_md-split-button-inner-corner-shape: var(
            --md-sys-shape-corner-radius-medium
        );
        --_md-split-button-interaction-inner-corner-shape: var(
            --md-sys-shape-corner-radius-large
        );

        --_md-button-icon-label-gap: var(--md-sys-layout-space-16);
        --_md-button-outline-width: calc(3 * var(--dp, 1px));

        /* primary button */
        --_md-split-button-primary-padding-inline-start: var(
            --md-sys-layout-space-64
        );
        --_md-split-button-primary-padding-inline-end: var(
            --md-sys-layout-space-64
        );

        --_md-split-button-primary-padding-block: var(--md-sys-layout-space-48);

        /* trigger button */
        --_md-split-button-trigger-padding-inline-start: calc(
            37 *
            var(--dp, 1px)
        );
        --_md-split-button-trigger-padding-inline-end: calc(
            49 *
            var(--dp, 1px)
        );

        --_md-split-button-trigger-pressed-padding-inline-start: calc(
            43 *
            var(--dp, 1px)
        );
        --_md-split-button-trigger-pressed-padding-inline-end: calc(
            43 *
            var(--dp, 1px)
        );

        --_md-split-button-trigger-padding-block: calc(43 * var(--dp, 1px));
        --_md-split-button-trigger-pressed-shape: var(
            --md-sys-shape-corner-radius-full
        );
    }
}

